fix: fix border countries alignment

--- a/src/Sass/App.scss
+++ b/src/Sass/App.scss
@@ -175,7 +175,7 @@ ul {
     li {
         padding: 0 20px;
         border-radius: 5px;
-        margin: 10px;
+        margin: 0 10px 15px 0;
     }
 }
 
